# pyxtabond2

./: README.md  pyproject.toml
examples/: example_basique.py
pyxtabond2/: __init__.py  api.py  data_utils.py  engine.py  exporter.py  gmm_builder.py  load_data.py  numfac.py  variance.py
pyxtabond2/datasets/: df_ife_panel.xlsx  df_ife_small.xlsx  df_panel.xlsx
