[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxtabond2"
version = "0.1.0"
authors = [
  { name="Frederick Kahindo", email="frederickahindo048@gmail.com" },
]
description = "A Python package for Dynamic Panel Data GMM Estimation, replicating Stata's xtabond2."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
word = ["python-docx>=0.8.11"] 

[project.urls]
"Homepage" = "https://github.com/Kahindo048/pyxtabond2"
"Bug Tracker" = "https://github.com/Kahindo048/pyxtabond2/issues"

[tool.setuptools]
license-files = []

[tool.setuptools.package-data]
"pyxtabond2.datasets" = ["*.csv", "*.dta", "*.xlsx"]